# pyTemplate

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
app/: main.py
app/modules/xmodule/: module.py
pytemplate/: config.py  main.py
pytemplate/modules/xmodule/: module.py  module_helpers.py
src/: const.py  main.py
src/modules/xmodule/: module.py  module_helpers.py
tests/x/: x_tests.py
